name:                nyanbda
version:             0.1.0.0
synopsis:            Intelligent anime torrent downloader
description:         Search, query, download and keep on top of episodes from
                     Nyaa Torrents.
homepage:            https://github.com/valderman/nyanbda
license:             MIT
license-file:        LICENSE
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
category:            Network
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  assets/*.css
  assets/*.html
  assets/*.js

flag haste
  description: Package is being built with Haste
  default: False

executable WebMain
  main-is:
    WebMain.hs
  other-modules:
    Nyanbda.Database,
    Nyanbda.Types,
    Nyanbda.Web,
    Nyanbda.Web.API,
    Nyanbda.Web.ClientAuth
  if !flag(haste)
    buildable: False
  else
    build-depends:
      base      >=4      && <5,
      text      >=1.2    && <1.3,
      selda     >=0.1.11 && <0.2,
      haste-lib >=0.6    && <0.7,
      haste-app >=0.1    && <0.2

executable nyanbda
  main-is:
    Main.hs
  other-modules:
    Nyanbda.Backend,
    Nyanbda.Config,
    Nyanbda.Database,
    Nyanbda.Filtering,
    Nyanbda.Opts,
    Nyanbda.Sources,
    Nyanbda.Sources.Nyaa,
    Nyanbda.Sources.RSS,
    Nyanbda.Sources.Types,
    Nyanbda.Types,
    Nyanbda.Parser,
    Nyanbda.Web,
    Nyanbda.Web.API,
    Nyanbda.Web.Server,
    Nyanbda.Web.HttpServer,
    Nyanbda.Web.Config,
    Nyanbda.Web.ClientAuth
  other-extensions:
    TupleSections,
    OverloadedStrings
  if flag(haste)
    buildable: False
  else
    build-depends:
      base             >=4     && <5,
      text             >=1.2   && <1.3,
      mime-types       >=0.1   && <0.2,
      filepath         >=1.4   && <1.5,
      parsec           >=3     && <4,
      transformers     >=0.4   && <0.5,
      feed             >=0.3   && <0.4,
      shellmate        >=0.3.4 && <0.4,
      shellmate-extras >=0.3.4 && <0.4,
      process          >=1.2   && <1.3,
      selda            >=0.1.11 && <0.2,
      selda-sqlite     >=0.1.3  && <0.2,
      -- for web daemon
      haste-lib        >=0.6   && <0.7,
      haste-app        >=0.1   && <0.2,
      network          >=2.6   && <2.7,
      HTTP             >=4000  && <5000,
      file-embed       >=0.0   && <0.1,
      network-uri      >=2.6   && <2.7,
      -- workaround for broken utf8 in feed
      bytestring       >=0.10.6 && <0.11,
      utf8-string      >=1   && <1.1
  default-language:
    Haskell2010
  ghc-options:
    -Wall -static -threaded
  extra-libraries:
    pthread
